# oflubet-calculator

./: .replit  LICENSE  README.md  app.py  erentemplates.py  otuzbirmanyagi.py  pyproject.toml  table_presets.py
templates/: home.html  styles.css  table_presets.html
