[tool.poetry]
name = "repl-nix-oflubet-calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_oflubet_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-session = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
